// Vitest Snapshot v1

exports[`overwrite JSON sb2 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 83edcb849771a197f9fbc61c2cb41cc7bc74b0311409bf197cf7dc63bcc1c75b],
  "title": "",
  "type": "sb2",
}
`;

exports[`overwrite JSON sb3 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 05747433e81c8b5fdedb5a0999c5dd88c8cf510622b7bff12d97d88679b3d219],
  "title": "",
  "type": "sb3",
}
`;

exports[`overwrite compressed sb3 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 df8b90c6e5076e7f77883335bb93fb4681c29bad6cb9328c4211b11b0f569baf],
  "title": "",
  "type": "sb3",
}
`;

exports[`process JSON sb2 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 3caf88a05d2a18a9eabc9d8db90b1c8282a12916cab141b70d821d03eda3eb5d],
  "title": "",
  "type": "sb2",
}
`;

exports[`process JSON sb3 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 36e8b445404a8072426a582dbc689028e49e391d301860ecc1df92ab98dbf527],
  "title": "",
  "type": "sb3",
}
`;

exports[`process and overwrite compressed sb3 with JSON in subdirectory 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 adf166379ca1e198d366a5aa3ceaac54d4a7dbdf3cc48b025fc0d65343614f08],
  "title": "",
  "type": "sb3",
}
`;

exports[`process compressed sb2 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 e1a56dfffa77e29c50166c1e2d1fc05af1dec3a156dc8602c9aa06da098dd546],
  "title": "",
  "type": "sb2",
}
`;

exports[`process compressed sb3 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 73f90aff8695ab18da8736f7a0b5054bed29cb2fc08fe59ab34da7d82c6a74d0],
  "title": "",
  "type": "sb3",
}
`;

exports[`process compressed sb3 with JSON in subdirectory 1`] = `
{
  "arrayBuffer": ArrayBuffer [SHA-256 52fa4c6fcffc48214861e5ad8f37f79b2a11e567d28674e10dd32f7e4bc5af2c],
  "title": "",
  "type": "sb3",
}
`;
